# Wands

./: .pre-commit-config.yaml  AGENTS.md  AGENTS_Pruefung.md  AGENT_AUFTRAG.md  GUIDE.md  Prozess.md  README-SPEC.md  README.md  main.py  pyproject.toml  requirements.txt  rooms.yaml  solver.py  start_process.py
schemas/: solution.schema.json
tests/: test_cli.py  test_model.py  test_progress.py  test_solver.py  test_utils.py  test_validator.py  test_visualizer.py
wands/: __init__.py  __main__.py  cli.py  config.py  model.py  progress.py  solver.py  utils.py  validator.py  visualizer.py
