[project]
name = "wands"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = ["ortools>=9.14", "pillow>=11.3"]

[tool.ruff]
line-length = 88
extend-select = ["I"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
