[project]
name = "wands"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.12",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[tool.ruff]
line-length = 88
extend-select = ["I"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
